--- a/cmd/web/templates/terminal.page.tmpl
+++ b/cmd/web/templates/terminal.page.tmpl
@@ -8,9 +8,11 @@
 <h2 class="mr-3 text-center">Virtual Terminal</h2>
 <hr>
 
+<div class="alert alert-danger text-center d-none" id="card-messages"></div>
 <form 
     action="/payment-succeeded"
     method="post" 
+    id="charge-form"
     name="charge_form"
     class="d-block  needs-validation charge-form"
     autocomplete="off"
@@ -49,7 +51,6 @@
                 autocomplete="cardholder-email-new"
                 >
         </div> 
-         <!-- Card number will be built by stripe -->
          <div class="mb-3">
             <label for="card-element" class="form-label">Credit or debit card</label>
             <div id="card-element" class="form-control"></div>
@@ -60,6 +61,13 @@
          <a id="pay-button" href="javascript:void(0)" class="btn btn-primary" onclick="val()">
             Charge Card
          </a>
+         <div id="processing-payment" class="text-center d-none">
+            <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">
+                    Loading...
+                </span>
+            </div>
+         </div>
     </form>
 {{end}}
 
@@ -70,12 +78,20 @@
         let stripe;
 
         const cardMessages = document.getElementById("card-messages");
-
+        const payButton = document.getElementById("pay-button");
+        const processing = document.getElementById("processing-payment");
         // public key!
         stripe = Stripe("pk_test_51KpxftB79yg7WE5a95akNpSGwDNycxslcEhTcjXsiiRNWqc0NGP5PDodaMlT4L9dC6CqhO9voFYP9frGmmodnzGs00YXHS96JK")
         
         function val(){
-
+            let form = document.getElementById("charge-form");
+            if(form.checkValidity() === false){
+                this.event.preventDefault();
+                this.event.stopPropagation();
+                form.classList.add("was-validated");
+                return;
+            }
+            form.classList.add("was-validated");
         }
 
         (function(){
