--- a/cmd/web/templates/terminal.page.tmpl
+++ b/cmd/web/templates/terminal.page.tmpl
@@ -86,7 +86,7 @@
         const payButton = document.getElementById("pay-button");
         const processing = document.getElementById("processing-payment");
         // public key!
-        stripe = Stripe("pk_test_51KpxftB79yg7WE5a95akNpSGwDNycxslcEhTcjXsiiRNWqc0NGP5PDodaMlT4L9dC6CqhO9voFYP9frGmmodnzGs00YXHS96JK")
+        stripe = Stripe({{index .StringMap "publishable_key"}});
 
         function hidePayButton(){
             payButton.classList.add("d-none");
@@ -138,13 +138,12 @@
                 body: JSON.stringify(payload)
             }
 
-            fetch("http://localhost:4001/api/payment-intent",requestOptions)
+            fetch("{{.API}}/api/payment-intent",requestOptions)
             .then(resp => resp.text())
             .then(resp => {
                 let data;
                 try {
                 data = JSON.parse(resp);
-                console.log(data);
                 stripe.confirmCardPayment(data.client_secret, {
                 payment_method: {
                         card: card,
