--- a/cmd/web/templates/stripe-js.partial.tmpl
+++ b/cmd/web/templates/stripe-js.partial.tmpl
@@ -44,7 +44,7 @@
             form.classList.add("was-validated");
             hidePayButton();
 
-            let amountToCharge = String(parseFloat(document.getElementById("amount").value) * 100);
+            let amountToCharge = document.getElementById("amount").value;
 
             let payload = {
                 amount: amountToCharge,
@@ -76,14 +76,14 @@
                 }
                 }).then(function(result){
                     if (result.error) {
-                    // card declined
-                    showCardError(result.error.message);
-                    showPayButtons();
+                        // card declined
+                        showCardError(result.error.message);
+                        showPayButtons();
                     } else if (result.paymentIntent) {
                         if (result.paymentIntent.status === "succeeded") {
                         // we have charged card
                         document.getElementById("payment_intent").value = result.paymentIntent.id;
-                        document.getElementById("payment_method").value = result.paymentIntent.payment_method_types[0];
+                        document.getElementById("payment_method").value = result.paymentIntent.payment_method;
                         document.getElementById("payment_amount").value = result.paymentIntent.amount;
                         document.getElementById("payment_currency").value = result.paymentIntent.currency;
                         processing.classList.add("d-none");
